--- a/index.html
+++ b/index.html
@@ -34,8 +34,41 @@
     </nav>
     <div class="container">
         <div class="row">
-            <h1 class="text-center">About Caleb</h1>
-            <p>Hello! My name is Caleb Chapman, thank you so much for taking the time to visiting my site. I currently work for American Medical Response as an Emergency Medical Technician. I am a Computer Information System studend with a concentration in Software Programming at Bluegrass Community and Technical College. I am fluent in HTML, CSS, and the framework BootStrap. I am moderatly fluent in Python, PHP, JavaScript, jQuery, and SQL. I am also experianced in running web and mail servers.</p>
+            <div class="media">
+                <div class="media-left media-middle"> <img src="images/profilecrop.png" class="media-object img-circle" style="width:150px"> </div>
+                <div class="media-body">
+                    <h1 class="media-heading">About Caleb</h1>
+                    <p>Hello! My name is Caleb Chapman, thank you so much for taking the time to visiting my site. I currently work for American Medical Response as an Emergency Medical Technician. I am a Computer Information System studend with a concentration in Software Programming at Bluegrass Community and Technical College. I am fluent in HTML, CSS, and the framework BootStrap. I am moderatly fluent in Python, PHP, JavaScript, jQuery, and SQL. I am also experianced in running web and mail servers.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <h1 class="text-center">Portfolio</h1> </div>
+        <div class="row cc-project">
+            <div class="col-sm-4">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <h3 class="text-center">Friendcode Lookup</h3>
+                        <p> This project is programmed in Python using the discord API discord.py. This project uses jSON and a webAPI to get and set data in a remote database. This is actually a module for a discord chat bot. It was created for the Nookipedia group chat to display peoples friendcodes and dreamcodes. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <h3 class="text-center">Paparelli Law</h3>
+                        <p> Paparelli Law is a law firm in Nashville, TN. I created their website, along with being there IT consultant. The site is a Wordpress site. It is completed but is not currently live due to prefrence of the client.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <h3 class="text-center">FriendCode Lookup</h3>
+                        <p> This project is programmed in Python using the discord API discord.py. This project uses jSON and a webAPI to get and set data in a remote database. This is actually a module for a discord chat bot. It was created for the Nookipedia group chat to display peoples friendcodes and dreamcodes. </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
