--- a/index.html
+++ b/index.html
@@ -41,52 +41,11 @@
             <div class="col-sm-6"> <img class="cc-image" src="images/profilecrop.png"></div>
         </div>
         <div class="row" id="portfolio">
-            <h1 class="text-center">Portfolio</h1> </div>
-        <div class="row cc-project">
-            <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <h3 class="text-center">Friendcode Lookup</h3>
-                        <p> This project is programmed in Python using the discord API discord.py. This project uses jSON and a webAPI to get and set data in a remote database. This is actually a module for a discord chat bot. It was created for the Nookipedia group chat to display peoples friendcodes and dreamcodes. </p>
-                        <a href="https://github.com/weathergeek96/Cogs-for-Red/tree/master/friendCode">
-                            <button type="button" class="btn btn-default"><i class="fa fa-github" aria-hidden="true"></i> GitHub</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <h3 class="text-center">Paparelli Law</h3>
-                        <p> Paparelli Law is a law firm in Nashville, TN. I designed and developed their website with Wordpress. The site is completed but is not currently live per request of the client.</p>
-                        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#PaparelliLaw"><i class="fa fa-camera" aria-hidden="true"></i> Preview</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <h3 class="text-center">Python RPG</h3>
-                        <p> Python RPG is a game that will have all of it's content created by the people playing it. It is programmed in Python. It still is a work in progress as I firmilerize myself with Python. </p>
-                        <a href="https://github.com/weathergeek96/PythonRPG">
-                            <button type="button" class="btn btn-default"><i class="fa fa-github" aria-hidden="true"></i> GitHub</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row cc-project">
-            <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <h3 class="text-center">Personalize Guess Who</h3>
-                        <p> This project is uses PHP, jQuery, HTML, and CSS to make a custom charactor sheet for the popular board game, Guess Who! This project is about 25% complete. When finished it will be a quick and easy way to customize a classic board game! </p>
-                        <a href="">
-                            <button type="button" class="btn btn-default"><i class="fa fa-television" aria-hidden="true"></i> Visit Site</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
+            <h1 class="text-center">Projects</h1> </div>
+        <div class="row">
+            <h2>Paparelli Law, PLLC</h2>
+            <div class="col-sm-6">Webdesign</div>
+            <div class="col-sm-6">http://paparellilaw.com</div>
         </div>
         <div class="row" id="resume">
             <h1 class="text-center">Resume</h1> </div>
@@ -94,13 +53,13 @@
             <h2 class="">Education</h2></div>
         <div class="row">
             <div class="col-sm-6">
-                <h4>Volunteer State Community College - May 2015</h4> Certification
+                <h4>Volunteer State Community College - Dec 2015</h4> Certification
                 <br> Major: Emergency Medical Technician </div>
             <div class="col-sm-6">
                 <h4>Bluegrass Community and Technical College - May 2018</h4> Associate of Science
                 <br> Major: Computer and Information Systems
                 <br> Concentration: Programming
-                <br> Cumulative GPA: 3.66/4.00</div>
+                <br> Cumulative GPA: 3.91/4.00</div>
         </div>
         <div class="row" id="certs">
             <h2 class="">Certifications and Licenses</h2>
@@ -130,24 +89,7 @@
         </div>
         <div class="row" id="contact">
             <h1 class="text-center">Contact Caleb</h1> </div>
-        <form class="form-horizontal">
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="email">Your Email:</label>
-                <div class="col-sm-8">
-                    <input type="email" class="form-control" id="email" placeholder="Enter email"> </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="msg">Message:</label>
-                <div class="col-sm-8">
-                    <textarea type="text" class="form-control" id="msg" placeholder="Your message"></textarea>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-8">
-                    <button type="submit" class="btn btn-default">Send Message</button>
-                </div>
-            </div>
-        </form>
+        <div class="row">Email: caleb@simplegenius.pro</div>
     </div>
 </body>
 <!-- Modal -->
